logs/scheduler/2024-03-23/other_ingestion_postgre/main_dag_sql_delapan_product.py.log
[2024-03-23T05:39:57.220+0000] {processor.py:161} INFO - Started process (PID=44) to work on /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py
[2024-03-23T05:39:57.222+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py for tasks to queue
[2024-03-23T05:39:57.225+0000] {logging_mixin.py:188} INFO - [2024-03-23T05:39:57.225+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py
[2024-03-23T05:39:57.234+0000] {logging_mixin.py:188} INFO - [2024-03-23T05:39:57.232+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py", line 103
    schedule_interval=None,
    ^
SyntaxError: keyword argument repeated
[2024-03-23T05:39:57.234+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py
[2024-03-23T05:39:57.262+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/other_ingestion_postgre/main_dag_sql_delapan_product.py took 0.046 seconds
